# plover-german-syllatype

./: .gitignore  README.md  commands.json  setup.cfg  setup.py
plover_delta_de/: __init__.py  dictionary.py  system.py
plover_german_syllatype/: __init__.py  dictionary.py  syllatype_commands.syl  syllatype_main.syl  system.py
plover_german_syllatype/Dictionaries/: syllatype_characters.syl  syllatype_commands.syl  syllatype_main.syl
plover_german_syllatype/dictionaries/: syllatype_characters.json  syllatype_commands.json  syllatype_main.jsyl
