[metadata]
name = plover-delta-de
version = 0.1.0
description = German (Delta) Layout for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = delta, Kaoffie
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0.dev10
packages = 
    plover_delta_de

[options.entry_points]
plover.dictionary =
    dsd = plover_delta_de:DeltaDictionary
    dwd = plover_delta_de:DeltaWordDictionary
plover.system =
    German Delta = plover_delta_de.system
