[metadata]
name = plover-german-syllatype
version = 1.3.0
description = German Syllatype Layout for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = delta, Kaoffie
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0.dev10
packages = 
    plover_german_syllatype

[options.entry_points]
plover.dictionary =
    jsyl = plover_german_syllatype:JSONSyllatypeDictionary
    syl = plover_german_syllatype:SyllatypeDictionary
plover.system =
    German Syllatype = plover_german_syllatype.system
